fixed overlapping on text search on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2701,6 +2701,8 @@ section#pages-results ul > li > a.results-title  {
   font-size: 20px;
   color: #1a0dab; 
   line-height: normal;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 section#pages-results ul > li > a.results-title:visited  {
